[project]
name = "lollmsbot"
version = "0.0.1"
description = "LoLLMS-based personal AI assistant (Clawdbot-style)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "lollms-client>=1.11.4",   # LoLLMS client[web:41]
    "python-dotenv>=1.0.0",    # .env loading[web:46]
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.7.0",      # Beautiful terminal UI
    "questionary>=2.0.0", # Interactive prompts
    "discord.py[voice]>=2.3.2",     # Discord bot[web:discord.py]
    "slack-sdk>=3.30.0",     # Slack[web:slack-sdk]
    "openai", # for lollms
    "PyNaCl",
    "jinja2"
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=20.0",  # Modern async Telegram bot library
]
all = [
    "python-telegram-bot>=20.0",
]

[project.scripts]
lollmsbot = "lollmsbot.cli:main"
