[project]
name = "lollmsbot"
version = "0.0.3"
description = "LoLLMS-based personal AI assistant"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "lollms-client>=1.11.4",   # LoLLMS client[web:41]
    "python-dotenv>=1.0.0",    # .env loading[web:46]
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.7.0",      # Beautiful terminal UI
    "questionary>=2.0.0", # Interactive prompts
    "discord.py[voice]>=2.3.2",     # Discord bot[web:discord.py]
    "slack-sdk>=3.30.0",     # Slack[web:slack-sdk]
    "openai", # for lollms
    "PyNaCl",
    "jinja2",
    "aiosqlite",
    "duckduckgo_search",
    "tweepy",
    "wikipedia",
    "newsapi",
    "praw"
]

[project.optional-dependencies]
dev = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "python-dotenv>=1.0.0",
]
discord = ["discord.py>=2.3.0"]
telegram = ["python-telegram-bot>=20.0"]
whatsapp = [
    "aiohttp>=3.9.0",  # For webhook server and HTTP client
    "twilio>=8.0.0",   # For Twilio WhatsApp API (optional)
]
slack = ["slack-bolt>=1.18.0"]
all = [
    "lollmsbot[dev,discord,telegram,whatsapp,slack]",
]

[project.scripts]
lollmsbot = "lollmsbot.cli:main"
